--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">JS</h1>
         </a>
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
@@ -52,9 +52,9 @@
     <div class="container">
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
-          <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
-          <h2>Desenvolvedor Frontend</h2>
+          <p>Olá!</p>
+          <h1>Sou a Julia Sales</h1>
+          <h2>Desenvolvedora Frontend</h2>
 
           <div class="redes-sociais">
             <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
@@ -66,7 +66,7 @@
 
         <div class="img-home">
           <div class="img-box inner-shadow">
-            <img class="outer-shadow" src="src/imagens/foto-perfil.png" alt="foto do perfil do Ricardo" />
+            <img class="outer-shadow" src="./src/imagens/foto-perfil.jpg" alt="foto do perfil da Julia" />
           </div>
         </div>
       </div>
@@ -82,12 +82,12 @@
       <div class="row">
         <div class="imagem-sobre-mim">
           <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
+            <img src="./src/imagens/foto-sobre-mim.jpg" alt="foto sobre mim" class="outer-shadow" />
           </div>
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Ricardo Dias e sou um desenvolvedor frontend em
+            <strong>Olá! Me chamo Julia Sales e sou uma desenvolvedora frontend em
               formação!</strong>
               Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
