adicionado favicon, estilizado logo e alterado nome da variavel de cor cinza

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Julia Sales - Desenvolvedora Frontend</title>
 
+    <link rel="shortcut icon" href="./src/imagens/favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/font-awesome.css" />
     <link rel="stylesheet" href="src/css/reset.css" />
 
@@ -62,10 +63,10 @@
               <a href="#" class="outer-shadow"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
+              <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
               <a href="#" class="outer-shadow"
                 ><i class="fab fa-whatsapp"></i
               ></a>
-              <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
               <a href="#" class="outer-shadow"
                 ><i class="fab fa-instagram"></i
               ></a>
@@ -132,7 +133,7 @@
             <div class="botoes">
               <a
                 target="_blank"
-                href="/src/arquivos/cv.pdf"
+                href="./src/arquivos/curriculum.pdf"
                 class="botao outer-shadow"
                 >Veja meu Currículo</a
               >
@@ -236,7 +237,7 @@
           <div class="projeto">
             <a href="https://github.com">
               <img
-                src="https://via.placeholder.com/515X700"
+                src="https://placehold.jp/515x700.png"
                 alt="Nome do projeto"
               />
               <h3>Projeto 1</h3>
@@ -250,7 +251,7 @@
           <div class="projeto">
             <a href="https://github.com">
               <img
-                src="https://via.placeholder.com/515X700"
+                src="https://placehold.jp/515x700.png"
                 alt="Nome do projeto"
               />
               <h3>Projeto 2</h3>
@@ -264,7 +265,7 @@
           <div class="projeto">
             <a href="https://github.com">
               <img
-                src="https://via.placeholder.com/515X700"
+                src="https://placehold.jp/515x700.png"
                 alt="Nome do projeto"
               />
               <h3>Projeto 3</h3>
@@ -278,7 +279,7 @@
           <div class="projeto">
             <a href="https://github.com">
               <img
-                src="https://via.placeholder.com/515X700"
+                src="https://placehold.jp/515x700.png"
                 alt="Nome do projeto"
               />
               <h3>Projeto 4</h3>
@@ -299,8 +300,8 @@
           <a href="#" class="outer-shadow"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
           <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
+          <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
           <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
