adicionado imagens e links dos projetos

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Julia Sales - Desenvolvedora Frontend</title>
 
-    <link rel="shortcut icon" href="./src/imagens/favicon2.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./src/imagens/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="src/css/font-awesome.css" />
     <link rel="stylesheet" href="src/css/reset.css" />
 
+    <link rel="stylesheet" href="src/css/variaveis.css" />
+
     <!-- Global -->
     <link rel="stylesheet" href="src/css/globais.css" />
-    <link rel="stylesheet" href="src/css/variaveis.css" />
+
+    <!-- Seções -->
     <link rel="stylesheet" href="src/css/secoes/header.css" />
     <link rel="stylesheet" href="src/css/secoes/home.css" />
     <link rel="stylesheet" href="src/css/secoes/sobre.css" />
@@ -126,8 +133,8 @@
 
             <p>
               Fora do mundo do código, adoro teatro, filmes, séries, viagens,
-              experiências culturais, como visitas a museus e exposições de
-              arte, que também inspiram minha forma de criar.
+              experiências culturais, tais quais visitas a museus, exposições de
+              arte, dentre outros, que também inspiram minha forma de criar.
             </p>
 
             <div class="botoes">
@@ -135,7 +142,7 @@
                 target="_blank"
                 href="./src/arquivos/curriculum.pdf"
                 class="botao outer-shadow"
-                >Veja meu Currículo</a
+                >Veja meu CV</a
               >
             </div>
           </div>
@@ -235,56 +242,56 @@
 
         <div class="container-projetos">
           <div class="projeto">
-            <a href="https://github.com">
+            <a target="_blank" href="https://github.com">
               <img
                 src="https://placehold.jp/515x700.png"
-                alt="Nome do projeto"
+                alt="botflix"
               />
               <h3>Projeto 1</h3>
               <div class="informacoes-projeto">
-                <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                <p>Projeto de... desenvolvido com inteligencia artificial, HTML, CSS, JavaScript, n8n...</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
           </div>
 
           <div class="projeto">
-            <a href="https://github.com">
+            <a target="_blank" href="https://jsales25.github.io/projeto-magick-ia/">
               <img
-                src="https://placehold.jp/515x700.png"
-                alt="Nome do projeto"
+                src="./src/imagens/projeto-magick-ia.png"
+                alt="Projeto Magick IA - E-Commerce"
               />
               <h3>Projeto 2</h3>
               <div class="informacoes-projeto">
-                <p>Lorem ipsum</p>
+                <p>Projeto de um E-Commerce desenvolvido com HTML, CSS e JavaScript</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
           </div>
 
           <div class="projeto">
-            <a href="https://github.com">
+            <a target="_blank" href="https://jsales25.github.io/landing-page-com-grid-agencia-xyz/">
               <img
-                src="https://placehold.jp/515x700.png"
-                alt="Nome do projeto"
+                src="./src/imagens/projeto-agencia-xyz.png"
+                alt="Projeto Landing Page com Grid - Agencia XYZ"
               />
               <h3>Projeto 3</h3>
               <div class="informacoes-projeto">
-                <p>Lorem ipsum</p>
+                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML e CSS</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
           </div>
 
           <div class="projeto">
-            <a href="https://github.com">
+            <a target="_blank" href="https://github.com">
               <img
-                src="https://placehold.jp/515x700.png"
-                alt="Nome do projeto"
+                src="./src/imagens/projeto-dragon-ball.png"
+                alt="Projeto Landing Page - Dragon Ball"
               />
               <h3>Projeto 4</h3>
               <div class="informacoes-projeto">
-                <p>Lorem ipsum</p>
+                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML, CSS e JavaScript</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
