adicionado novo projeto

--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
 
         <div class="container-projetos">
           <div class="projeto">
-            <a target="_blank" href="https://github.com">
+            <a target="_blank" href="https://jsales25.github.io/botflix/">
               <img
-                src="https://placehold.jp/515x700.png"
+                src="./src/imagens/projeto-botflix.png"
                 alt="botflix"
               />
               <h3>Projeto 1</h3>
               <div class="informacoes-projeto">
-                <p>Projeto de... desenvolvido com inteligencia artificial, HTML, CSS, JavaScript, n8n...</p>
+                <p>Projeto desenvolvido com HTML, CSS, JavaScript, integração com IA e API e autamação com N8N.</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
