alterado descrição dos projetos

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               />
               <h3>Projeto 1</h3>
               <div class="informacoes-projeto">
-                <p>Projeto desenvolvido com HTML, CSS, JavaScript, integração com IA e API e autamação com N8N.</p>
+                <p>Projeto de indicação de filmes desenvolvido com HTML, CSS, JavaScript, integração com IA e API e automação com N8N.</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
@@ -263,7 +263,7 @@
               />
               <h3>Projeto 2</h3>
               <div class="informacoes-projeto">
-                <p>Projeto de um E-Commerce desenvolvido com HTML, CSS e JavaScript</p>
+                <p>Projeto de um E-Commerce responsivo desenvolvido com HTML, CSS e JavaScript.</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
@@ -277,7 +277,7 @@
               />
               <h3>Projeto 3</h3>
               <div class="informacoes-projeto">
-                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML e CSS</p>
+                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML e CSS.</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
@@ -291,7 +291,7 @@
               />
               <h3>Projeto 4</h3>
               <div class="informacoes-projeto">
-                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML, CSS e JavaScript</p>
+                <p>Projeto de uma Landing Page responsiva desenvolvida com HTML, CSS e JavaScript.</p>
                 <p>🔗 Ver no GitHub Pages</p>
               </div>
             </a>
