--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             <h2>Desenvolvedora Frontend</h2>
 
             <div class="redes-sociais">
-              <a href="#" class="outer-shadow"
+              <a target="_blank" href="https://www.linkedin.com/in/julia-sales-developer/" class="outer-shadow"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-              <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-              <a href="#" class="outer-shadow"
+              <a target="_blank" href="https://github.com/jsales25" class="outer-shadow"><i class="fab fa-github"></i></a>
+              <a target="_blank" href="http://wa.me/5581985549313?" class="outer-shadow"
                 ><i class="fab fa-whatsapp"></i
               ></a>
-              <a href="#" class="outer-shadow"
+              <a target="_blank" href="https://www.instagram.com/itsjuliasalless?igsh=MTNucjNjejQ2cmVjMw%3D%3D&utm_source=qr" class="outer-shadow"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -302,14 +302,21 @@
 
     <footer class="footer">
       <div class="container">
+        <nav>
+            <ul>
+                <li><a href="#sobre-mim">Sobre Mim</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#projetos">Meus Projetos</a></li>
+            </ul>
+        </nav>
         <h2>Me envie uma mensagem!</h2>
         <div class="redes-sociais">
-          <a href="#" class="outer-shadow"
+          <a target="_blank" href="https://www.linkedin.com/in/julia-sales-developer/" class="outer-shadow"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-          <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-          <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+          <a target="_blank" href="https://github.com/jsales25" class="outer-shadow"><i class="fab fa-github"></i></a>
+          <a target="_blank" href="http://wa.me/5581985549313?" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+          <a target="_blank" href="https://www.instagram.com/itsjuliasalless?igsh=MTNucjNjejQ2cmVjMw%3D%3D&utm_source=qr" class="outer-shadow"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </footer>
