adicionado o media ate 330px

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 target="_blank"
                 href="./src/arquivos/curriculo-desenvolvedora-frontend.pdf"
                 class="botao outer-shadow"
-                >Veja meu CV</a
+                >Veja meu Currículo</a
               >
             </div>
           </div>
